# twilight-armada

./: .gitignore  Cargo.toml  README.md  godot_install.sh  sync-assets.sh
better-terrain-faster/: Cargo.toml
better-terrain-faster/src/: dock_controller.rs  editor.rs  lib.rs
godot/: better-terrian-faster-dev.gdextension  better-terrian-faster-dev.gdextension.uid  icon.svg.import  project.godot  twilight-armada.gdextension  twilight-armada.gdextension.uid
godot/components/: outlined-white.png.import  player_character.gd.uid  player_character.tscn  player_controller.gd.uid  player_controller.tscn  ship_build_component.gd  ship_build_component.gd.uid  ship_build_component.tscn  ship_controller.gd  ship_controller.gd.uid  ship_controller.tscn  ship_controller_test_v1.gd  ship_controller_test_v1.gd.uid  ship_controller_test_v1.tscn
godot/examples/edge_shader/: edge_shader.gdshader.uid
godot/examples/sharp_corner_tapering/: sharp_corner_tapering.tscn
godot/levels/: battle_ground.tscn  benchmark.tscn  main.tscn  test.gd.uid
godot/levels/tileset/: decoration.tres  ground_tileset.tres  road.tres  trees.tres
godot/levels/world/: character.json  character_testing.tscn  initial.tscn  initial_level.tscn  ship_building_site.tscn
godot/scripts/: benchmark.gd  benchmark.gd.uid  fps_counter.gd  fps_counter.gd.uid  global.gd  global.gd.uid  player_controller.gd  player_controller.tscn  ship_controller.gd  ship_controller.tscn  test.gd  test.gd.uid
godot/ui/: ship_builder.gd  ship_builder.gd.uid  ship_builder.tscn  sprite_item.gd  sprite_item.gd.uid  sprite_item.tscn
rust/: Cargo.toml
rust-macro/: Cargo.toml
rust-proc-macro/: Cargo.toml
rust-proc-macro/src/: lib.rs
rust/src/: lib.rs
rust/src/model/: ship.rs
