[package]
name = "better-terrain-faster"
version = "0.1.0"
edition = "2021"

[lib]
name = "better_terrain_faster"
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
ron = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
