[package]
name = "twilight-armada"
version = "0.1.0"
edition = "2021"

[lib]
name = "twilight_armada"
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
rayon = "1.10.0"
ron = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
twilight-armada-proc-macro = { path = "../rust-proc-macro" }
