[package]
name = "twilight-armada"
version = "0.1.0"
edition = "2021"

[lib]
name = "twilight_armada"
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
diesel = { version = "2.2.4", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
# Build the SQLite library from source.
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
rayon = "1.10.0"
ron = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
twilight-armada-proc-macro = { path = "../rust-proc-macro" }